# aadharkyc_fastapi

./: LICENSE  README.md  docker-compose.yml  sample.env
backend/: backend.dockerfile
backend/app/: pyproject.toml
backend/app/app/: main.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: aadhar.py
backend/app/app/api/utils/: exception_handler.py
backend/app/app/core/: config.py
