[tool.poetry]
name = "Aadhar  Offline eKYC"
version = "1.0.0"
description = ""
authors = ["Darshit Kothari <kotharidarsh104@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.113.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
pytest = "^8.3.2"
python-multipart = "^0.0.9"
starlette-context = "^0.3.6"
uvicorn = "^0.30.6"

[tool.poetry.dev-dependencies]
argh = "^0.31.3"
autoflake = "^2.3.1"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
sqlalchemy-stubs = "^0.4"
watchdog = "^5.0.2"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=1.8.3"]
build-backend = "poetry.masonry.api"